# comp2510-procedural-programming

./: .gitignore  README.md
assignments/assignment_1/: CMakeLists.txt  main.c  streditor.c  streditor.h
assignments/assignment_2/: CMakeLists.txt  main.c  snacks.c  snacks.h  snacktracker  test  todo
labs/lab-1-notaika/: README.md  ex1  ex1_finance  ex1_finance.c  ex2  ex2_access  ex2_access.c  ex3  ex3_shipping  ex3_shipping.c
labs/lab-2-notaika/: README.md  part1  part1.c  part2  part2.c
labs/lab-3-notaika/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  guardian.c  guardian.h  lab_3_notaika  main.c
labs/lab-4-notaika/: CMakeLists.txt  debug_task_setC  debug_task_setC.c  lab5.c  zz.c
labs/lab-5-notaika/: CMakeLists.txt  debugging.c  lab6.c
labs/lab-7-notaika/: CMakeLists.txt  lab7.c  test
labs/lab-8-notaika/: CMakeLists.txt  inclass.c  lab8  lab8.c  linked_list_lect.c
lecture/archive/2510-lect2/: main  (+3 more)
lecture/lectures/: CMakeLists.txt
lecture/lectures/week_eight/: mem_alloc.c
lecture/lectures/week_five/: arrayTransversals.c  hesamExamples.c  pointersTwo.c
lecture/lectures/week_four/: pointers.c
lecture/lectures/week_one/: fundamentals.c  scanf.c
lecture/lectures/week_seven/: activity_m07.c  file_io.c  fio  io_prac.c  test.txt
lecture/lectures/week_two/: arrays.c  strings.c  switch.c
review/: CMakeLists.txt  main.c  midterm.c  pointers  pointers_prac.c  structs  structs.c  structs_prac  structs_prac.c  test
self/: CMakeLists.txt
self/ch11/: pointers.c
self/ch7/: char_types.c
self/ch8/: one_d_arrays.c  two_d_arrays.c
(+16 files in other folders)
